--- a/report/palu_autoch_sentinelles.Rmd
+++ b/report/palu_autoch_sentinelles.Rmd
@@ -13,14 +13,15 @@ output: pdf_document
 
 ```{r,echo=F,fig.width=10, out.extra='',comment='', message=FALSE , warning=FALSE}
 setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
-source("./import_data.R");
-source("./preprocessing.R");require(ggplot2); require(gridExtra)
+source("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel/import_data.R");
+source("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel/preprocessing.R");require(ggplot2); require(gridExtra)
 #Retrieve Malaria (TDR+ ~~PaluConf) for HTC sites
 mydata= preprocessing_disease(select_htc=TRUE)[["Malaria"]]
+
 setnames(mydata,"occurence","palu")
 #Retrieve Malaria autochtone for HTC sites:
 palu_autoch= fread("data/palu_autoch.csv")
-palu_autoch=palu_autoch[as.Date(deb_sem)>=as.Date("2015-06-01"),]
+palu_autoch=palu_autoch[as.Date(deb_sem,origin="1970-01-01")>=as.Date("2015-06-01",origin="1970-01-01"),]
 htc= c("deb_sem","code","abon","ambl","ants","bela",
         "diri","dona","fito","mand","miad","mnld",
         "mora","samp","snam","tanb","tomp","tsar",
@@ -45,7 +46,7 @@ palu_autoch=unique(palu_autoch,by=NULL)
 mydata=merge(mydata,palu_autoch[,list(code,sites,autoch)],
              by.x=c("code","sites"),by.y=c("code","sites"),all.x=T,all.y=T)
 #preprocess data:
-mydata=mydata[as.Date(deb_sem)>=as.Date("2015-06-01"),]
+mydata=mydata[as.Date(deb_sem,origin="1970-01-01")>=as.Date("2015-06-01",origin="1970-01-01"),]
 
 
 #Calculate Palu Importé:
@@ -78,7 +79,7 @@ Z2=unique(X[,list(deb_sem,palu_importe)],by=NULL); setnames(Z2,"palu_importe","v
 Z2[,Légende:="Palu importé"]
 
 X= rbind (Z1,Z2); rm(Z1);rm(Z2)
-X$deb_sem=as.Date(X$deb_sem)
+X$deb_sem=as.Date(X$deb_sem,origin="1970-01-01")
 
  d=ggplot(X, aes(x=deb_sem, y=vals, fill = Légende, colour = Légende)) 
  d= d + geom_bar(stat = "identity") 
@@ -93,7 +94,7 @@ print(d)
 ```{r,echo=F,out.extra='',comment='', message=FALSE , warning=FALSE}
 setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
 semaine=array()
-max_deb_sem=max(as.Date(palu_autoch$deb_sem))
+max_deb_sem=max(as.Date(palu_autoch$deb_sem,origin="1970-01-01"))
 semaine[6]= max_deb_sem-2*7 
 p=1
 for ( k in 2:6 )
@@ -102,7 +103,7 @@ for ( k in 2:6 )
   p=p+1
 }
 # selection for last 6 weeks before current week for Palu autochtone:
-last6_palu_autoch=palu_autoch[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,autoch)]
+last6_palu_autoch=palu_autoch[as.Date(deb_sem,origin="1970-01-01") %in% semaine,list(deb_sem,sites,autoch)]
 # reverse time order (to be conform to the report)
 setorder(last6_palu_autoch,sites,deb_sem)
 
@@ -118,7 +119,7 @@ last6_palu_autoch[,autoch:=ifelse(nchar(autoch)<2,paste0("0",autoch),autoch)]
 #inline historical occurence:
 last6_palu_autoch[,vals:=paste(autoch,collapse = "-"),by="sites"]
 last6_palu_autoch[,autoch:=NULL]
-lastweek =  palu_autoch[as.Date(deb_sem)==max_deb_sem-7, list(sites,autoch)]
+lastweek =  palu_autoch[as.Date(deb_sem,origin="1970-01-01")==max_deb_sem-7, list(sites,autoch)]
 
 lastweek[,autoch:=as.character(autoch)]
 lastweek[is.na(autoch)==T,autoch:="na"]
