--- a/report/palu_autoch_sentinelles.Rmd
+++ b/report/palu_autoch_sentinelles.Rmd
@@ -87,7 +87,9 @@ X$deb_sem=as.Date(X$deb_sem,origin="1970-01-01")
  d= d + scale_color_manual(values=c("#CC6666", "#9999CC"))
  d= d + ggtitle(label="Cas de Paludisme (autochtone vs Importé)")
  d= d + xlab("Date") + ylab("Nb. Cas")
- d= d + scale_x_date(labels = date_format("%m-%Y"))
+ d=d+theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))
+ d= d + scale_x_date(date_breaks = "1 week")
+ 
 print(d)
 ```
 
