--- a/report/palu_autoch_sentinelles.Rmd
+++ b/report/palu_autoch_sentinelles.Rmd
@@ -82,7 +82,7 @@ X= rbind (Z1,Z2); rm(Z1);rm(Z2)
 X$deb_sem=as.Date(X$deb_sem,origin="1970-01-01")
 
  d=ggplot(X, aes(x=deb_sem, y=vals, fill = Légende, colour = Légende)) 
- d= d + geom_bar(stat = "identity") 
+ d= d + geom_bar(colour="black",stat = "identity") 
  d= d + scale_fill_manual(values=c("#CC6666", "#9999CC"))
  d= d + scale_color_manual(values=c("#CC6666", "#9999CC"))
  d= d + ggtitle(label="Cas de Paludisme (autochtone vs Importé)")
@@ -187,13 +187,15 @@ for ( p in myname )
         mymax=range(as.numeric(X$value)[is.na(as.numeric(X$value))==F])
         mymax[2]=ifelse(mymax[2]<10,10,mymax[2])
         d = d + scale_y_continuous(breaks= seq.int(from=1,to=mymax[2],by=2) ) 
-        d = d + geom_bar(stat = "identity") 
+        d = d + geom_bar(colour="black",stat = "identity") 
         d = d + scale_fill_manual(values=c("#CC6666", "#9999CC"))
         d = d + scale_color_manual(values=c("#CC6666", "#9999CC"))
         
         d = d + ggtitle(label=last6_palu_autoch[Sites==p,get("Centre")])
         d = d + xlab("Date") + ylab("Nb. Cas")
-        d= d + scale_x_date(labels = date_format("%m-%Y"))
+       # d= d + scale_x_date(labels = date_format("%m-%Y"))
+        d=d+theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))
+        d= d + scale_x_date(date_breaks = "2 weeks")
       print(d)
   }
   
