--- a/report/palu_autoch_sentinelles.Rmd
+++ b/report/palu_autoch_sentinelles.Rmd
@@ -82,7 +82,10 @@ X= rbind (Z1,Z2); rm(Z1);rm(Z2)
 X$deb_sem=as.Date(X$deb_sem,origin="1970-01-01")
 
  d=ggplot(X, aes(x=deb_sem, y=vals, fill = Légende, colour = Légende)) 
- d= d + geom_bar(colour="black",stat = "identity") 
+ #adding space between bars:, position = position_dodge(width=0.5)
+ d= d + geom_bar(colour="black",stat = "identity" ) 
+ # add figure within stacked bar,color text:
+ d= d + geom_text(aes(label = vals),color="green",size = 3)
  d= d + scale_fill_manual(values=c("#CC6666", "#9999CC"))
  d= d + scale_color_manual(values=c("#CC6666", "#9999CC"))
  d= d + ggtitle(label="Cas de Paludisme (autochtone vs Importé)")
