--- a/report/ILI_sentinelles.Rmd
+++ b/report/ILI_sentinelles.Rmd
@@ -109,11 +109,11 @@ setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentine
                       as.numeric(as.Date("2014-01-01")),
                       as.numeric(as.Date("2015-01-01")),
                       as.numeric(as.Date("2016-01-01")))
-                     
-       
       d= d + geom_vline(xintercept = debut_annee,
                         linetype=4,colour="orange")
       d=d + ggtitle(label=paste(myname[p]))
+      #save graph to be re-used later:
+      save(p,d,file=paste0("report/ili/ili_",myname[p],".rda"))
       d=d + xlab("Date (ligne orange=1er janvier)") + ylab("Nb. Cas")
       print(d)
     }
