fix last week table in all reports

--- a/report/Diar_sentinelles.Rmd
+++ b/report/Diar_sentinelles.Rmd
@@ -44,7 +44,7 @@ p
 
 semaine=array()
 max_deb_sem=max(as.Date(mydata$deb_sem,origin="1970-01-01"))
-semaine[6]= max_deb_sem-2*7 
+semaine[6]= max_deb_sem-1*7 #semaine dernière par rapport à la semaine en cours
 p=1
 for ( k in 2:6 )
 {
