--- a/report/PFA_sentinelles.Rmd
+++ b/report/PFA_sentinelles.Rmd
@@ -52,7 +52,7 @@ setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentine
 mydata= preprocessing_disease(include_all_sites=T)[["PFA"]]
 semaine=array()
 max_deb_sem=max(as.Date(mydata$deb_sem,origin="1970-01-01"))
-semaine[6]= max_deb_sem-1*7 #semaine dernière par rapport à la semaine en cours
+semaine[6]= max_deb_sem-2*7 
 p=1
 for ( k in 2:6 )
 {
