--- a/report/palu_autoch_sentinelles.Rmd
+++ b/report/palu_autoch_sentinelles.Rmd
@@ -104,6 +104,7 @@ setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentine
 semaine=array()
 max_deb_sem=max(as.Date(palu_autoch$deb_sem,origin="1970-01-01"))
 semaine[6]= max_deb_sem-2*7 
+p=1
 for ( k in 2:6 )
 {
   semaine[p]=semaine[6]-(k-1)*7
@@ -138,14 +139,18 @@ last6_palu_autoch=merge(last6_palu_autoch,
  setnames(last6_palu_autoch,c("sites","vals","autoch"),
                  c("Sites","6 semaines précédentes","Semaine dernière"))
 #tolower name of sites:
- require(Hmisc)
+require(Hmisc)
 last6_palu_autoch[,Centre:=capitalize(tolower(Centre))]
+#save table to be re-used later:
+save(last6_palu_autoch,file="interactive_summary_report/last6_palu_autoch.rda")
+
 #generate tables:
 knitr::kable(last6_palu_autoch[, c("Centre","6 semaines précédentes","Semaine dernière"),with=F], caption="Paludisme autochtone dans le réseau sentinelle HTC")
 ```
 
 ```{r,echo=F, fig.show = "hold"  ,out.width ='50%',out.extra='',comment='',message=FALSE , warning=FALSE}
 setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
+
 #loop and plot:
 mydata= preprocessing_disease(select_htc=TRUE)[["Malaria"]]
 setnames(mydata,"occurence","palu")
