--- a/report/ILI_sentinelles.Rmd
+++ b/report/ILI_sentinelles.Rmd
@@ -17,10 +17,10 @@ output: pdf_document
 ```{r,echo=F, fig.width=10, out.extra='',comment='', message=FALSE , warning=FALSE}
 if ( getwd()!="/srv/shiny-server/sentinel_hrmntr/Sentinel/report" )
 {
-   setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel/report")
+   setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
  
 } else {
-  setwd("/srv/shiny-server/sentinel_hrmntr/Sentinel/report")
+  setwd("/srv/shiny-server/sentinel_hrmntr/Sentinel")
   
 }
 source("./import_data.R");source("./preprocessing.R");require(ggplot2); require(gridExtra)
@@ -51,10 +51,10 @@ print(d)
 ```{r,echo=F,out.extra='',comment='', message=FALSE , warning=FALSE}
 if ( getwd()!="/srv/shiny-server/sentinel_hrmntr/Sentinel/report" )
 {
-  setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel/report")
+  setwd("/media/herimanitra/Document/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
   
 } else {
-    setwd("/srv/shiny-server/sentinel_hrmntr/Sentinel/report")
+    setwd("/srv/shiny-server/sentinel_hrmntr/Sentinel")
 
   
 }
