--- a/report/Palu_sentinelles.Rmd
+++ b/report/Palu_sentinelles.Rmd
@@ -25,7 +25,7 @@ if ( getwd()!="/srv/shiny-server/sentinel_hrmntr/Sentinel/report" )
 #load source code:
 require(ggplot2); require(gridExtra)
 source("./import_data.R");
-source("./tdrplus.R");
+source("./algorithms/tdrplus.R");
 #source("./var_conversion.R") #no longer used
 mydata= tdr_malaria(htc=F)
 source("./reporting_plot.R",local = T)
